<resources>
    <string name="app_name">Story telling</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="by_zgeniuscoders">By zgeniuscoders</string>
    <string name="story_title">Titre</string>
    <string name="story_content">Contenu</string>
    <string name="home">Accueil</string>
    <string name="add">Ajoiuer</string>
    <string name="loading_txt">Telecharment</string>
    <string name="title">Story telling</string>
    <string name="content">Lorem ipsum dolor isit tolor ipsum lorem solor thuis lorem piscum</string>
    <string name="recommendation">Recommendation</string>
    <string name="your_daily">Your daily</string>
    <string name="category_name">category 1</string>
    <string name="time_ago">il ya 20 minutes</string>
    <string name="editor_name">par zgeniuscoders</string>
    <string name="book">Histoires</string>
    <string name="settings">Parametres</string>
    <string name="favorite">Favory</string>
    <string name="your_favorite">Vos histoires favori</string>
    <string name="username">Jhone Doe</string>
    <string name="update_delete_stories">Modifier ou supprimer vos histoires</string>
    <string name="story_txt">Mes histoires</string>
    <string name="followers_txt">Mes abonner</string>
    <string name="account_txt">Mon compte</string>
    <string name="account_desc">Modifier votre nom,supprimer votre compte...</string>
    <string name="edit">editer</string>
</resources>