<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/homeFragment"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="never" />
    <item
        android:id="@id/storyFragment"
        android:icon="@drawable/baseline_menu_book_24"
        android:title="@string/book"
        app:showAsAction="never" />

    <item
        android:id="@id/favoriteFragment"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="never" />

    <item
        android:id="@id/addStoryFragment"
        android:icon="@drawable/pen"
        android:title="@string/add"
        app:showAsAction="never" />

    <item
        android:id="@id/settingFragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>