<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".fragments.SettingFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/img" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_centerHorizontal="true"
        app:cornerRadius="50dp"
        android:layout_below="@+id/user_bio"/>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btn_edit"/>

    <RelativeLayout
        android:id="@+id/setting_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:padding="20dp"
        android:background="@drawable/bg_setting_radius"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/story_txt"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_delete_stories"
            android:textColor="@color/white"
            android:layout_below="@id/textView1"/>
        <TextView
            android:id="@+id/story_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_followers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_story"
        android:padding="20dp"
        android:background="@drawable/bg_setting_radius"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_txt"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_delete_stories"
            android:textColor="@color/white"
            android:layout_below="@id/textView3"/>
        <TextView
            android:id="@+id/followers_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/setting_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_followers"
        android:padding="20dp"
        android:background="@drawable/bg_setting_radius"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_txt"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_desc"
            android:textColor="@color/white"
            android:layout_below="@id/textView5"/>


    </RelativeLayout>

</RelativeLayout>